--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="Esri.ArcGISRuntime" version="100.1.0" targetFramework="net45" />
   <package id="Esri.ArcGISRuntime.WPF" version="100.1.0" targetFramework="net46" />
+  <package id="Npgsql" version="2.2.7" targetFramework="net46" />
+  <package id="Npgsql.EntityFramework" version="2.2.7" targetFramework="net46" />
 </packages>
